change background,font,brochure change

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head lang="en">
-  <title>JIIT ICABB 2021</title>
+  <title>JIIT ICABB 2022</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="JIIT ICABB 2021 is the biggest 2021 digital conference held virtually from January 28th to January 30th 2021" />
+  <meta name="description" content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
   <meta name="keywords" content="JIIT, ICABB, ICABB JIIT, sunny, dhama, noida" />
   <meta name="robots" content="index,follow" />
   <link rel="icon" type="image/png" href="assets/favicon-96x96.png" />
@@ -17,11 +17,11 @@
   <link rel="stylesheet" href="css/timeline.css" />
   <link rel="stylesheet" href="css/main.css" />
   <!-- for Facebook -->
-  <meta property="og:title" content="JIIT ICABB 2021" />
+  <meta property="og:title" content="JIIT ICABB 2022" />
   <meta property="og:type" content="website" />
   <meta property="og:image:secure" content="https://icabbjiit.com/assets/meta_img.png" />
   <meta property="og:url" content="https://icabbjiit.com/" />
-  <meta property="og:description" content="JIIT ICABB 2021 is the biggest 2021 digital conference held virtually from January 28th to January 30th 2021" />
+  <meta property="og:description" content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
 </head>
 
 <body>
@@ -35,12 +35,15 @@
   <content>
     <div class="header">
       <img class="bg-main" src="assets/Abstract-Envelope.svg" alt="" />
-      <div class="shape shape-1">
+      <img class="bg-main" src="assets/41379-e0edd4.svg" alt="" />
+
+
+      <!-- <div class="shape shape-1">
         <img src="img/blue/blueShape1.png" />
-      </div>
-      <div class="shape shape-2">
+      </div> -->
+      <!-- <div class="shape shape-2">
         <img src="img/blue/blueShape2.png" class="rellax" data-rellax-speed="-5" />
-      </div>
+      </div> -->
       <div class="shape shape-10">
         <img src="img/blue/tech2.png" class="rellax" data-rellax-speed="-5" />
       </div>
@@ -136,7 +139,7 @@
                   <table class="table table-hover impDates">
                     <thead>
                       <tr>
-                        <th>IMPORTANT DATES</th>
+                        <th class="impItem">IMPORTANT DATES</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -271,14 +274,15 @@
       </div>
       <div class="title">PAST EVENTS</div>
       <div class="shape shape-4">
-        <img src="img/blue/blueShapeSide.png" />
+        <!-- <img src="assets/1456467-96d35f.svg" alt=""> -->
+        <!-- <img src="img/blue/blueShapeSide.png" /> -->
       </div>
     </div>
     <!--  -->
     <div class="main-wrap">
       <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
         <h1 style="
-              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
               background-clip: border-box;
               -webkit-background-clip: text;
@@ -397,7 +401,8 @@
         <div class="line"></div>
       </div>
       <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
-        <img src="img/blue/blueShapeSide2.png" />
+        <img src="assets/1456467-96d35f.svg" alt="">
+        <!-- <img src="img/blue/blueShapeSide2.png" /> -->
       </div>
     </div>
 
@@ -603,7 +608,7 @@
     <div class="main-wrap">
       <div class="content">
         <h1 class="spons_numb" style="
-              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
               background-clip: border-box;
               -webkit-background-clip: text;
@@ -630,15 +635,15 @@
           <div class="line"></div>
         </a>
       </div>
-      <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
+      <!-- <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
         <img src="img/blue/blueShapeSide2.png" />
-      </div>
+      </div> -->
     </div>
 
     <div class="main-wrap">
       <div class="content">
         <h1 style="
-              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
               background-clip: border-box;
               -webkit-background-clip: text;
@@ -763,11 +768,12 @@
       </div>
       <div class="title">FAQ</div>
       <div class="shape shape-4 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
-        <img src="img/blue/blueShapeSide.png" />
+        <img src="assets/1456467-96d35f.svg" alt="">
+        <!-- <img src="img/blue/blueShapeSide.png" /> -->
       </div>
     </div>
     <footer>
-      <img src="img/cloud.png" />
+      <!-- <img src="img/cloud.png" /> -->
       <div class="footer">
         <div class="social">
           <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i class="fa fa-facebook-square"></i></a>
@@ -783,7 +789,7 @@
                 color: white;
                 text-decoration: none;
               ">CONTACT US</a><br /><br />
-          <p>&copy ICABB JIIT 2021</p>
+          <p>&copy ICABB JIIT 2022</p>
           <div class="line"></div>
           <p>
             DESIGNED AND DEVELOPED WITH
