--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -2,11 +2,11 @@
 <html>
 
 <head lang="en">
-    <title>JIIT ICABB 2021</title>
+    <title>JIIT ICABB 2022</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <meta name="description"
-        content="JIIT ICABB 2021 is the biggest 2021 digital conference held virtually from January 28th to January 30th 2021" />
+        content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
     <meta name="keywords" content="JIIT, ICABB, ICABB JIIT, sunny, dhama, noida" />
     <meta name="robots" content="index,follow" />
     <link rel="icon" type="image/png" href="assets/favicon-96x96.png" />
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="css/timeline.css" />
     <link rel="stylesheet" href="css/main.css" />
     <!-- for Facebook -->
-    <meta property="og:title" content="JIIT ICABB 2021" />
+    <meta property="og:title" content="JIIT ICABB 2022" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://icabbjiit.com/assets/meta_img.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:url" content="https://icabbjiit.com/" />
     <meta property="og:description"
-        content="JIIT ICABB 2021 is the biggest 2021 digital conference held virtually from January 28th to January 30th 2021" />
+        content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         <div class="main-wrap">
             <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
                 <h1 style="
-              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
               background-clip: border-box;
               -webkit-background-clip: text;
@@ -62,7 +62,7 @@
 
   <div>
 
-  <h1 style="margin-top: 10%; font-size: 300%;">PATRONS</h1>
+  <h1 style="margin-top: 10%; color:#4b778d; font-size: 300%;">PATRONS</h1>
                 <div class="team-row">
 
                   <div class="judges img">
@@ -90,7 +90,7 @@
     </div>
     <div>
 
-    <h1 style="margin-top: 10%; font-size: 300%;">CONFERENCE CHAIRPERSON</h1>
+    <h1 style="margin-top: 10% ; color:#4b778d; font-size: 300%;">CONFERENCE CHAIRPERSON</h1>
                   <div class="team-row">
 
                     <div class="judges img">
@@ -117,7 +117,7 @@
       </div>
       <div>
 
-      <h1 style="margin-top: 10%; font-size: 300%;">ORGANISING SECRETARY</h1>
+      <h1 style="margin-top: 10%; color:#4b778d; font-size: 300%;">ORGANISING SECRETARY</h1>
                     <div class="team-row" style="margin-bottom:400px;">
 
                       <div class="judges img">
@@ -207,7 +207,7 @@
 
 
                     <div class="content-gray" style="margin-top: 40px;">
-                        <h6 class="text-center" style="color: #145dbb;">OUR ORGANIZING TEAM
+                        <h6 class="text-center" style="color: #4b778d;">OUR ORGANIZING TEAM
                         </h6>
 
 
@@ -288,12 +288,12 @@
         </div>
         <div class="title">ORGANISING</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
-            <img src="img/blue/blueShapeSide2.png" />
+            <img src="assets/1456467-96d35f.svg" />
         </div>
         </div>
 
         <footer>
-            <img src="img/cloud.png" />
+
             <div class="footer">
                 <div class="social">
                     <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
