made changes to registration page,brochure

--- a/brochure.html
+++ b/brochure.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
                         style="margin-top: 40px;">
-                        <a href="Brochure-ICABB-2022-2.docx" target="_blank"><button>Download Brochure</button></a>
+                        <a href="assets/brochure.pdf" target="_blank"><button>Download Brochure</button></a>
 
                     </div>
 
