--- a/registration-fees.html
+++ b/registration-fees.html
@@ -44,7 +44,7 @@
         <div class="main-wrap">
             <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
                 <h1 style="
-              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
               background-clip: border-box;
               -webkit-background-clip: text;
@@ -59,30 +59,65 @@
                 <div class="container">
                     <div class="container">
                         <div class="table-responsive">
-                            <p style=" text-align: center; color: #145dbb;">Scroll Left for more rows</p>
-                        <table class="table table-sm">
+                            <p style=" text-align: center; color: #28b5b5;">Scroll Left for more columns</p>
+                        <table class="table table-sm" style="empty-cells:show; text-align:center;">
                             <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">Category</th>
-                                    <th scope="col">Conference</th>
-                                    <th scope="col">INDIAN PARTICIPATION (INR)</th>
-                                    <th scope="col">INTERNATIONAL PARTICIPATION (USD)</th>
+                                    <th scope="col" colspan="2"></th>
+                                    <th scope="col" colspan="2">Indian Participants (INR)</th>
+                                    <th scope="col" colspan="2">International Participants (USD)</th>
+                                    <!-- <th scope="col">INTERNATIONAL PARTICIPATION (USD)</th> -->
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody style="text-align:center;">
                                 <tr>
-                                    <th scope="row">Presenter</th>
-                                    <th scope="row">Students/Research Scholars</th>
-                                    <td style="text-align: center;">₹ 1000</td>
-                                    <td style="text-align: center;">$ 100</td>
+                                  <th scope="col" colspan="2"></th>
+                                  <th scope="col">Till 24th Dec 2021</th>
+                                  <th scope="col">After 24th Dec 2021</th>
+                                  <th scope="col">Till 24th Dec 2021</th>
+                                  <th scope="col">Till 24th Dec 2021</th>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Attendee</th>
-                                    <th scope="row">Students/Research Scholars</th>
-                                    <td style="text-align: center;">₹ 200</td>
-                                    <td style="text-align: center;">$ 50</td>
+                                    <th scope="row" colspan="2">Industry</th>
+                                    <td>8,000</td>
+                                    <td>9,000</td>
+                                    <td>350</td>
+                                    <td>400</td>
                                 </tr>
+
                                 <tr>
+                                    <th scope="row" colspan="2">Academia</th>
+                                    <td>6,000</td>
+                                    <td>6,500</td>
+                                    <td>250</td>
+                                    <td>300</td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row" colspan="2">Research Scholar</th>
+                                    <td>2,000</td>
+                                    <td>2,500</td>
+                                    <td>200</td>
+                                    <td>250</td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row" colspan="2">Students (UG/PG)</th>
+                                    <td>2,000</td>
+                                    <td>2,500</td>
+                                    <td>200</td>
+                                    <td>250</td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row" colspan="2">Attendee Only</th>
+                                    <td>500</td>
+                                    <td>1,200</td>
+                                    <td>100</td>
+                                    <td>150</td>
+                                </tr>
+
+                                <!-- <tr>
                                     <th scope="row" rowspan="2">Presenter/Attendee</th>
                                     <th scope="row">Faculty/Scientists from Academia</th>
                                     <td style="text-align: center;">₹ 2000</td>
@@ -92,7 +127,7 @@
                                     <th scope="row">Participants from Industry</th>
                                     <td style="text-align: center;">₹ 5000</td>
                                     <td style="text-align: center;">$ 300</td>
-                                </tr>
+                                </tr> -->
                             </tbody>
                         </table>
                     </div>
@@ -134,7 +169,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <p class="text-center"><b style="color: #145dbb;">Please mention ICABB – 2021, “Your Name” and Abstract “reference
+                        <p class="text-center"><b style="color: #28b5b5;">Please mention ICABB – 2021, “Your Name” and Abstract “reference
                                 number” in all communications.</b></p>
                     </div>
                 </div>
@@ -146,12 +181,12 @@
         </div>
         <div class="title">FEE DETAILS</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
-            <img src="img/blue/blueShapeSide2.png" />
+            <img src="assets/1456467-96d35f.svg" />
         </div>
         </div>
 
         <footer>
-            <img src="img/cloud.png" />
+            
             <div class="footer">
                 <div class="social">
                     <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
@@ -161,7 +196,7 @@
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
-                    
+
                     <p>&copy ICABB JIIT 2021</p>
                     <div class="line"></div>
                     <p>
