--- a/registration.html
+++ b/registration.html
@@ -56,43 +56,65 @@
                     <p></p>
                     <div class="line"></div>
                 </div>
-                <div class="container">
+                <div class="container" style="padding-bottom:15%;">
                     <div class="container d-flex flex-column align-items-center justify-content-center"
                         style="margin-top: 30px;">
                         <p style="color: red;font-weight: bold;">NO APPLICATION WILL BE ENTERTAINED WITHOUT FEE PAYMENT
                         </p><br />
                     </div>
-                    <h2 class="text-center">PRESENTEE</h2>
-                    <div class="content-gray" style="display: block;">
+                    <h2 class="text-center">ATTENDEE</h2>
+                    <div class="content-gray" style="display: block; margin-bottom:5%;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>PRESENTEE REGISTRATION
-                                    FORM</button></a>
+                            <a href="registration-fees.html"><button>PROCEED WITH PAYMENT
+                                    </button></a>
                         </p>
-                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an
+                        <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an
                             acceptance mail of abstract within two weeks with a
                             specific
-                            Abstract ID (ICABB ID)</p>
-                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
-                                href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
-                        <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                            Abstract ID (ICABB ID)</p> -->
+                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a target="_blank"
+                                href="https://docs.google.com/forms/d/e/1FAIpQLSfXuY0ldpblKGQuDZrKfkO-aEQhxyupxeZFPc81-l9W3r59tA/viewform?usp=sf_link"><button>REGISTRATION FORM</button></a></p>
+                        <!-- <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
                                 target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform?usp=sf_link"><button>FINAL
-                                    REGISTRATION FORM</button></a></p>
+                                    REGISTRATION FORM</button></a></p> -->
                     </div>
-                    <h2 class="text-center">ATTENDEE</h2>
-                    <div class="content-gray" style="display: block;">
-                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>ATTENDEE REGISTRATION
+                    <h2 class="text-center">STUDENTS & RESEARCH SCHOLARS</h2>
+                    <div class="content-gray" style="display: block; margin-bottom:5%;">
+                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                              href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p>
+
+                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf15zP0orSSrEEuuazylIRh0f7d-IhC1mNc3uXw_G-eCHKubA/viewform?usp=sf_link"><button>REGISTRATION
                                     FORM</button></a>
                         </p>
-                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             You will receive a confirmation mail.</p>
-                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
-                                href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
+
                         <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
                                 target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform?usp=sf_link"><button>FINAL
-                                    REGISTRATION FORM</button></a></p>
+                                    REGISTRATION FORM</button></a></p> -->
                     </div>
 
+                    <h2 class="text-center">ACADEMIA</h2>
+                    <div class="content-gray" style="display: block; margin-bottom:5%;">
+                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                              href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p>
+
+                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe4ZjGbusAMHTuGONRzEgCo6mqYIFHQJgYPrH4qn6ch2wRdEw/viewform?usp=sf_link"><button>REGISTRATION
+                                    FORM</button></a>
+                        </p>
+                   </div>
+                   <h2 class="text-center">INDUSTRY</h2>
+                   <div class="content-gray" style="display: block; margin-bottom:5%;">
+                       <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                             href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p>
+
+                       <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                           <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSex7_5_SptKy-PV_Whh7_K8Q05mzFeH3O9FX2FdBqLWgrCV0w/viewform?usp=sf_link"><button>REGISTRATION
+                                   FORM</button></a>
+                       </p>
+                  </div>
                 </div>
 
 
