--- a/JournalPartner.html
+++ b/JournalPartner.html
@@ -2,11 +2,11 @@
 <html>
 
 <head lang="en">
-    <title>JIIT ICABB 2021</title>
+    <title>JIIT ICABB 2022</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <meta name="description"
-        content="JIIT ICABB 2021 is the biggest 2021 digital conference held virtually from January 28th to January 30th 2021" />
+        content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
     <meta name="keywords" content="JIIT, ICABB, ICABB JIIT, sunny, dhama, noida" />
     <meta name="robots" content="index,follow" />
     <link rel="icon" type="image/png" href="assets/favicon-96x96.png" />
@@ -19,19 +19,19 @@
     <link rel="stylesheet" href="css/timeline.css" />
     <link rel="stylesheet" href="css/main.css" />
     <!-- for Facebook -->
-    <meta property="og:title" content="JIIT ICABB 2021" />
+    <meta property="og:title" content="JIIT ICABB 2022" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://icabbjiit.com/assets/meta_img.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:url" content="https://icabbjiit.com/" />
     <meta property="og:description"
-        content="JIIT ICABB 2021 is the biggest 2021 digital conference held virtually from January 28th to January 30th 2021" />
+        content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
 </head>
 
 <body>
     <nav class="navbar navbar-light bg-transparent">
         <a class="navbar-brand" href="/"><i class="fa fa-chevron-left" style="margin-right: 10px;"
-                aria-hidden="true"></i>ICABB JIIT 2021</a>
+                aria-hidden="true"></i>ICABB JIIT 2022</a>
     </nav>
     <lines>
         <div class="wrap"></div>
@@ -44,7 +44,7 @@
         <div class="main-wrap">
             <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
                 <h1 style="
-              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
               background-clip: border-box;
               -webkit-background-clip: text;
@@ -58,17 +58,17 @@
                 </div>
                 <div class="container">
                     <div class="content-gray" style="display: block;">
-                        <h2>Full Length Papers</h2>
-                        <img class="jp-img" src="assets/flp1.jpg"  alt="">
+                        <h2>Coming Soon!</h2>
+                        <!-- <img class="jp-img" src="assets/flp1.jpg"  alt="">
                         <img class="jp-img" src="assets/flp2.jpg" alt="">
                         <br>
                         <br>
                         <br>
                         <h2>Abstracts</h2>
-                        <img class="jp-img" src="assets/Abstracts.jpg" alt="">
+                        <img class="jp-img" src="assets/Abstracts.jpg" alt=""> -->
 
                     </div>
-                   
+
 
                 </div>
 
@@ -79,22 +79,22 @@
         </div>
         <div class="title">JOURNAL PARTNERS</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
-            <img src="img/blue/blueShapeSide2.png" />
+            <img src="assets/1456467-96d35f.svg" alt="">
         </div>
         </div>
 
         <footer>
-            <img src="img/cloud.png" />
+
             <div class="footer">
                 <div class="social">
-                    <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
+                    <a href="https://www.facebook.com/ICABB-2022-102130145072351" target="_blank"><i
                             class="fa fa-facebook-square"></i></a>
-                    <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/icabb_2022/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
-                    <p>&copy ICABB JIIT 2021</p>
+                    <p>&copy ICABB JIIT 2022</p>
                     <div class="line"></div>
                     <p>
                         DESIGNED AND DEVELOPED WITH
