--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <meta name="description"
-        content="JIIT ICABB 2021 is the biggest 2021 digital conference held virtually from January 28th to January 30th 2021" />
+        content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
     <meta name="keywords" content="JIIT, ICABB, ICABB JIIT, sunny, dhama, noida" />
     <meta name="robots" content="index,follow" />
     <link rel="icon" type="image/png" href="assets/favicon-96x96.png" />
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="css/timeline.css" />
     <link rel="stylesheet" href="css/main.css" />
     <!-- for Facebook -->
-    <meta property="og:title" content="JIIT ICABB 2021" />
+    <meta property="og:title" content="JIIT ICABB 2022" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://icabbjiit.com/assets/meta_img.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:url" content="https://icabbjiit.com/" />
     <meta property="og:description"
-        content="JIIT ICABB 2021 is the biggest 2021 digital conference held virtually from January 28th to January 30th 2021" />
+        content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
 </head>
 
 <body>
@@ -44,7 +44,7 @@
         <div class="main-wrap">
             <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
                 <h1 style="
-              background: linear-gradient(0deg, #145dbb, #28b9ee);
+              background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
               background-clip: border-box;
               -webkit-background-clip: text;
@@ -75,17 +75,17 @@
         </div>
         <div class="title">CONTACT</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
-            <img src="img/blue/blueShapeSide2.png" />
+            <img src="assets/1456467-96d35f.svg" />
         </div>
         </div>
 
         <footer>
-            <img src="img/cloud.png" />
+
             <div class="footer">
                 <div class="social">
-                    <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
+                    <a href="https://www.facebook.com/ICABB-2022-102130145072351" target="_blank"><i
                             class="fa fa-facebook-square"></i></a>
-                    <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/icabb_2022/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
