--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -280,7 +280,7 @@
                             </div>
                         </div> -->
                         <!-- <a href="registration"><button>REGISTER NOW</button></a> -->
-                        <a href="contact-us"><button>CONTACT US</button></a>
+                        <a href="contact-us.html"><button>CONTACT US</button></a>
 
                     </div>
                 </div>
