--- a/registration.html
+++ b/registration.html
@@ -80,40 +80,45 @@
                     </div>
                     <h2 class="text-center">STUDENTS & RESEARCH SCHOLARS</h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
-                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
-                              href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p>
+                        <!-- <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                              href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p> -->
 
-                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSf15zP0orSSrEEuuazylIRh0f7d-IhC1mNc3uXw_G-eCHKubA/viewform?usp=sf_link"><button>REGISTRATION
                                     FORM</button></a>
                         </p>
-                        <!-- <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            You will receive a confirmation mail.</p>
+                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            You will be notified once your abstract gets accepted and payment can be made then.</p>
 
-                        <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                        <!-- <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
                                 target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform?usp=sf_link"><button>FINAL
-                                    REGISTRATION FORM</button></a></p> -->
+                                    REGISTRATION FORM</button></a></p>  -->
                     </div>
 
                     <h2 class="text-center">ACADEMIA</h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
-                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
-                              href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p>
+                        <!-- <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                              href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p> -->
 
-                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe4ZjGbusAMHTuGONRzEgCo6mqYIFHQJgYPrH4qn6ch2wRdEw/viewform?usp=sf_link"><button>REGISTRATION
                                     FORM</button></a>
                         </p>
+                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                           You will be notified once your abstract gets accepted and payment can be made then.</p>
+
                    </div>
                    <h2 class="text-center">INDUSTRY</h2>
                    <div class="content-gray" style="display: block; margin-bottom:5%;">
-                       <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
-                             href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p>
+                       <!-- <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                             href="registration-fees.html"><button>PROCEED WITH PAYMENT</button></a></p> -->
 
-                       <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                       <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSex7_5_SptKy-PV_Whh7_K8Q05mzFeH3O9FX2FdBqLWgrCV0w/viewform?usp=sf_link"><button>REGISTRATION
                                    FORM</button></a>
                        </p>
+                       <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                          You will be notified once your abstract gets accepted and payment can be made then.</p>
                   </div>
                 </div>
 
@@ -122,6 +127,12 @@
 
             </div>
         </div>
+
+        <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
+            style="margin-top: 40px;">
+          <a href="contact-us.html"><button>CONTACT US</button></a>
+        </div>
+
         <div class="title">REGISTRATION</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
           <img src="assets/1456467-96d35f.svg" alt="">
