--- a/speakers.html
+++ b/speakers.html
@@ -64,8 +64,7 @@
                 <h1>Prof. Anirban Chakraborti</h1>
                 <br />
                 <p>
-                  <br />Professor and Head, Department of Biochemistry, All
-                  India Institute of Medical Sciences, New Delhi, India
+                  <br />Professor at the School of Computational and Integrative Sciences, Jawaharlal Nehru University, New Delhi
                 </p>
               </div>
             </div>
@@ -75,7 +74,7 @@
                 <h1>Prof. Pawan Dhar</h1>
                 <br />
                 <p>
-                  Director, National Institute of Immunology, New Delhi, India
+                  HOD, School of Biotechnology, Jawaharlal Nehru University, New Delhi
                 </p>
               </div>
             </div>
@@ -85,8 +84,7 @@
                 <h1>Prof. Rup Lal</h1>
                 <br />
                 <p>
-                  Professor Emeritus, Department of Biochemical Engineering and
-                  Biotechnology, IIT Delhi
+                   NASI Senior Scientist Platinum Jubilee fellow at The Energy and Resources Institute (TERI), Delhi
                 </p>
               </div>
             </div>
