--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </p>
         </div> -->
         <img class="logo" src="assets/logo.png" alt="" />
-        <img class="logo1" src="assets/logo1.png" alt="" />
+        <img class="logo1" src="assets/logo1.jpeg" alt="" />
         <div class="main-header-div">
           <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
             INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
