pre-final updates

--- a/speakers.html
+++ b/speakers.html
@@ -64,7 +64,7 @@
                 <h1>Prof. Anirban Chakraborti</h1>
                 <br />
                 <p>
-                  <br />Professor at the School of Computational and Integrative Sciences, Jawaharlal Nehru University, New Delhi
+                  <br />Professor At Jawaharlal Nehru University, New Delhi
                 </p>
               </div>
             </div>
@@ -94,7 +94,7 @@
                 <h1>Prof. Yogender singh</h1>
                 <br />
                 <p>
-                  Associate Professor, Universidad Autónoma de Barcelona, Spain
+                  Professor at University of Delhi, Delhi
                 </p>
               </div>
             </div>
@@ -104,8 +104,7 @@
                 <h1>Dr. N. S. Punekar</h1>
                 <br />
                 <p>
-                  <br />Senior Investigator, Cancer Data Science Laboratory,
-                  Center for Cancer Research, National Cancer Institute, MD, USA
+                  <br />Professor ar Indian Institute of Technology Bombay
                 </p>
               </div>
             </div>
@@ -194,7 +193,7 @@
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                    <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <p>&copy ICABB JIIT 2022</p>
                 <div class="line"></div>
