--- a/advisoryCommittee.html
+++ b/advisoryCommittee.html
@@ -114,7 +114,7 @@
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i
                             class="fa fa-linkedin-square"></i></a>
-                    <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
                     <p>&copy ICABB JIIT 2022</p>
