--- a/brochure.html
+++ b/brochure.html
@@ -42,7 +42,7 @@
     </lines>
     <content>
         <div class="main-wrap">
-            <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5" style="width:80%;">
+            <div class="content rellax" data-rellax-speed="0" data-rellax-percentage="0.5" style="width:80%;">
                 <h1 style="
               background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
@@ -85,7 +85,7 @@
         </div>
         </div>
 
-        <footer style="padding-top:15%;">
+        <footer style="padding-top:0;">
 
             <div class="footer">
                 <div class="social">
@@ -93,7 +93,7 @@
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-                    <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
                     <p>&copy ICABB JIIT 2022</p>
