--- a/gallery.html
+++ b/gallery.html
@@ -41,8 +41,8 @@
         <div class="wrap"></div>
     </lines>
     <content>
-        <div class="main-wrap">
-            <div class="content rellax" data-rellax-speed="-4" data-rellax-percentage="0.5">
+      <div class="main-wrap past-photo" style="margin-bottom:15%;">
+        <div class="content" style="width:90%;">
                 <h1 style="
               background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
@@ -50,38 +50,109 @@
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             ">
-                    SCHEDULE
+                    GALLERY
                 </h1>
                 <div class="head">
                     <p></p>
                     <div class="line"></div>
                 </div>
-                <div class="container">
-                    <div class="content-gray" style="display: block;">
-                      <h2>Coming Soon!</h2>
-                        <!-- <a  href="Scientific Programme_Website.pdf" target="_blank"
-                        ><button>PROGRAMME SCHEDULE</button></a
-                      >
-                        <a href="Table_for_website.pdf" target="_blank"
-                        ><button>PRESENTATION SCHEDULE</button></a
-                      > -->
+
+                <div class="container-fluid">
+                  <div class="car-container">
+                    <div class="car-container-inner">
+                      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+
+                          <div class="carousel-item active item">
+                            <img src="assets/c7.jpeg" class="d-block w-100 car-img" alt="..." />
+                          </div>
+
+                          <div class="carousel-item">
+                            <img src="assets/c8.jpeg" class="d-block w-100 car-img" alt="..." />
+                          </div>
+
+
+                          <div class="carousel-item">
+                            <img src="assets/c9.jpeg" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+
+                          <div class="carousel-item">
+                            <img src="assets/c10.jpeg" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+
+                          <div class="carousel-item">
+                            <img src="assets/c11.jpeg" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+
+                      </div>
                     </div>
-
-
+                  </div>
                 </div>
-
-
 
 
             </div>
         </div>
-        <div class="title">SCHEDULE</div>
+
+        <div class="lightbox">
+  <div class="row">
+    <div class="col-lg-6">
+      <img
+        src="assets/gal1.jpg"
+        data-mdb-img="https://mdbootstrap.com/img/Photos/Slides/1.jpg"
+        alt="Lightbox image 1"
+        class="w-100 mb-2 mb-md-4 shadow-1-strong rounded"
+      />
+      <img
+        src="assets/gal2.jpg"
+        data-mdb-img="https://mdbootstrap.com/img/Photos/Square/1.jpg"
+        alt="Lightbox image 2"
+        class="w-100 shadow-1-strong rounded"
+      />
+    </div>
+    <div class="col-lg-6">
+      <img
+        src="assets/gal3.jpg"
+        data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
+        alt="Lightbox image 3"
+        class="w-100 shadow-1-strong rounded"
+      />
+      <img
+        src="assets/gal4.jpg"
+        data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
+        alt="Lightbox image 3"
+        class="w-100 shadow-1-strong rounded"
+      />
+      <img
+        src="assets/gal5.jpg"
+        data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
+        alt="Lightbox image 3"
+        class="w-100 shadow-1-strong rounded"
+      />
+    </div>
+  </div>
+</div>
+
+
+        <div class="title">GALLERY</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
             <img src="assets/1456467-96d35f.svg" />
         </div>
         </div>
 
-        <footer>
+        <footer style="margin-top:13;">
 
             <div class="footer">
                 <div class="social">
