--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="description" content="JIIT ICABB 2022 is the biggest 2022 digital conference held virtually from January 20th to January 22nd 2022" />
-  <meta name="keywords" content="JIIT, ICABB, ICABB JIIT, sunny, dhama, noida" />
+  <meta name="keywords" content="JIIT, ICABB, ICABB JIIT, sunny, dhama, utkarsh, aggarwal noida" />
   <meta name="robots" content="index,follow" />
   <link rel="icon" type="image/png" href="assets/favicon-96x96.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
@@ -64,8 +64,8 @@
             ORGANISING
           </p>
         </div> -->
-        <img class="logo" src="assets/logo.png" alt="" />
-        <img class="logo1" src="assets/logo1.jpeg" alt="" />
+        <img class="logo" src="assets/icabb light.png" alt="" />
+        <img class="logo1" src="assets/logo1.png" alt="" />
         <div class="main-header-div">
           <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
             INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
@@ -81,14 +81,15 @@
           <div class="navtab">
             <ul>
               <li class="list-item"><a class="navbar" href="registration">REGISTER</a></li>
-              <li class="list-item"><a class="navbar" href="guidelines">GUIDELINES</a></li>
+              <!-- <li class="list-item"><a class="navbar" href="guidelines">GUIDELINES</a></li> -->
               <li class="list-item"><a class="navbar" href="callForAbstract.html">CALL FOR ABSTRACT</a></li>
               <li class="list-item"><a class="navbar" href="brochure.html">VIEW BROCHURE</a></li>
               <li class="list-item"><a class="navbar" href="schedule.html">SCHEDULE</a></li>
               <li class="list-item"><a class="navbar" href="speakers.html">SPEAKERS</a></li>
-              <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
               <li class="list-item"><a class="navbar" href="orgCommittee.html">ORGANISING COMMITEE</a></li>
               <li class="list-item"><a class="navbar" href="advisoryCommittee.html">ADVISORY COMMITEE</a></li>
+              <li class="list-item"><a class="navbar" href="gallery.html">GALLERY</a></li>
+              <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
               <!-- target="_blank" -->
             </ul>
           </div>
@@ -630,7 +631,7 @@
       </div>
       <div class="title">SPONSORS</div>
       <div class="collab">
-        <a href="mailto:reema.gabrani@jiit.ac.in">
+        <a href="mailto:icabb2022@gmail.com">
           COLLAB WITH <span>US</span>
           <div class="line"></div>
         </a>
@@ -671,7 +672,7 @@
             <p>
               The details for the format of poster are given in the guidelines
               section.
-              <a href="https://icabbjiit.com/guidelines" target="_blank">Click here</a>
+              <a href="https://icabbjiit.com/callForAbstract.html" target="_blank">Click here</a>
             </p>
           </div>
           <div class="track-wrap">
@@ -679,7 +680,7 @@
             <p>
               The details for the format of abstract are given in the
               guidelines section.
-              <a href="https://icabbjiit.com/guidelines" target="_blank">Click here</a>
+              <a href="https://icabbjiit.com/callForAbstract.html" target="_blank">Click here</a>
             </p>
           </div>
           <div class="track-wrap">
@@ -687,7 +688,7 @@
             <p>
               For duration of the presentation and other details kindly go
               through the guidelines section.
-              <a href="https://icabbjiit.com/guidelines" target="_blank">Click here</a>
+              <a href="https://icabbjiit.com/callForAbstract.html" target="_blank">Click here</a>
             </p>
           </div>
           <div class="track-wrap">
@@ -779,7 +780,7 @@
           <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i class="fa fa-facebook-square"></i></a>
           <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
           <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-          <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
+          <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
         </div>
         <div class="credit">
           <a target="_blank" href="contact-us" style="
@@ -796,6 +797,8 @@
             <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
             BY
             <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
+              <span style="color: white;font-size: 16px;font-weight: 500;">AND</span>
+             <span><a target="_blank" href="https://www.linkedin.com/in/utkarsh-aggarwal-ab5ba31a0/">UTKARSH AGGARWAL</a></span>
           </p>
         </div>
       </div>
