--- a/registration.html
+++ b/registration.html
@@ -88,7 +88,7 @@
                                     FORM</button></a>
                         </p>
                          <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            You will be notified once your abstract gets accepted and payment can be made then.</p>
+                            You will be notified once your abstract gets accepted.</p>
 
                         <!-- <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
                                 target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform?usp=sf_link"><button>FINAL
@@ -105,7 +105,7 @@
                                     FORM</button></a>
                         </p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                           You will be notified once your abstract gets accepted and payment can be made then.</p>
+                           You will be notified once your abstract gets accepted.</p>
 
                    </div>
                    <h2 class="text-center">INDUSTRY</h2>
@@ -118,8 +118,14 @@
                                    FORM</button></a>
                        </p>
                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                          You will be notified once your abstract gets accepted and payment can be made then.</p>
+                          You will be notified once your abstract gets accepted.</p>
                   </div>
+
+                  <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
+                      style="margin-top: 40px;">
+                    <a href="contact-us.html"><button>CONTACT US</button></a>
+                  </div>
+
                 </div>
 
 
@@ -128,10 +134,7 @@
             </div>
         </div>
 
-        <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
-            style="margin-top: 40px;">
-          <a href="contact-us.html"><button>CONTACT US</button></a>
-        </div>
+
 
         <div class="title">REGISTRATION</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
@@ -149,7 +152,7 @@
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i
                             class="fa fa-linkedin-square"></i></a>
-                    <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
                     <p>&copy ICABB JIIT 2022</p>
