--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -131,7 +131,7 @@
                         </div>
                       </div>
                       <div class="judges img right">
-                        <img src="assets/speaker2.jpg" />
+                        <img src="assets/Shazia-photo.jpg" />
                         <div class="team-content">
                           <h1>Dr. Shazia Haider</h1>
                           <br />
