--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="carousel-inner">
 
                   <div class="carousel-item active item">
-                    <img src="assets/c7.jpeg" class="d-block w-100 car-img" alt="..." />
+                    <img src="assets/1.1.jpg" class="d-block w-100 car-img" alt="..." />
                   </div>
                   <table class="table table-hover impDates">
                     <thead>
@@ -159,7 +159,7 @@
                     </tbody>
                   </table>
                   <div class="carousel-item">
-                    <img src="assets/c8.jpeg" class="d-block w-100 car-img" alt="..." />
+                    <img src="assets/1.3.jpg" class="d-block w-100 car-img" alt="..." />
                   </div>
 
                   <table class="table table-hover impDates">
@@ -184,7 +184,7 @@
                     </tbody>
                   </table>
                   <div class="carousel-item">
-                    <img src="assets/c9.jpeg" class="d-block w-100 car-img" alt="..." />
+                    <img src="assets/1.2.jpg" class="d-block w-100 car-img" alt="..." />
 
                   </div>
                   <table class="table table-hover impDates">
@@ -209,7 +209,7 @@
                     </tbody>
                   </table>
                   <div class="carousel-item">
-                    <img src="assets/c10.jpeg" class="d-block w-100 car-img" alt="..." />
+                    <img src="assets/1.4.jpg" class="d-block w-100 car-img" alt="..." />
 
                   </div>
                   <table class="table table-hover impDates">
@@ -234,7 +234,7 @@
                     </tbody>
                   </table>
                   <div class="carousel-item">
-                    <img src="assets/c11.jpeg" class="d-block w-100 car-img" alt="..." />
+                    <img src="assets/1.7.jpg" class="d-block w-100 car-img" alt="..." />
 
                   </div>
                   <table class="table table-hover impDates">
