Made requested changes
//General: 
Changed a few hex codes, font sizes and alignments 
Removed a few "line" divs

//home: 
Changed order of "nav container" list 
Changed minor text content and carousel properties
Removed background/s
//abstract/guidelines: 
Made 2 separate triggers to show on/offline guidelines separately 
Changed text to reflect current info 
//speakers and orgCommittee: 
Made changes to images and credentials of speakers/guests/organizers 

//js: 
Event-listeners and response functions

//Assets: 
Cropped and modified assets to suit aspect ratios better

--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -57,7 +57,6 @@
                 </h1>
                 <div class="head">
                     <p>WHO WE ARE.</p>
-                    <div class="line"></div>
                 </div>
 
   <div>
@@ -99,7 +98,7 @@
                         <h1>Prof. Pammi Gauba</h1>
                         <br />
                         <p>
-                          <br />HOD, Biotechnology Department, JIIT, Noida
+                          <br />Head, Department of Biotechnology, JIIT, Noida
                         </p>
                       </div>
                     </div>
@@ -121,7 +120,7 @@
                     <div class="team-row" style="margin-bottom:400px;">
 
                       <div class="judges img">
-                        <img src="assets/org1.jpeg" />
+                        <img src="assets/org1-copy.jpg" />
                         <div class="team-content">
                           <h1>Prof. Rachana</h1>
                           <br />
