--- a/speakers.html
+++ b/speakers.html
@@ -51,7 +51,7 @@
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
               ">
-            Keynote Speakers
+            Speakers
           </h1>
           <div class="head">
             <p></p>
@@ -84,7 +84,7 @@
                 <h1>Prof. Rup Lal</h1>
                 <br />
                 <p>
-                   NASI Senior Scientist Platinum Jubilee fellow at The Energy and Resources Institute (TERI), Delhi
+                   Professor at North Campus DU, Delhi
                 </p>
               </div>
             </div>
@@ -104,7 +104,7 @@
                 <h1>Dr. N. S. Punekar</h1>
                 <br />
                 <p>
-                  <br />Professor ar Indian Institute of Technology Bombay
+                  <br />Professor at Indian Institute of Technology Bombay
                 </p>
               </div>
             </div>
